--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ fabric.properties
 !.idea/runConfigurations
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,java
+
+files
